WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82188
[Qt] Taps are sometimes not highlighted
https://bugs.webkit.org/show_bug.cgi?id=82188
Summary
[Qt] Taps are sometimes not highlighted
Allan Sandfeld Jensen
Reported
2012-03-26 04:10:31 PDT
In some circumstances, such as scripted links, the activated element is not tap-highlighted. It happens because WebPage::highlightPotentialActivation only looks for links, and incorrectly ends up highlighting nothing if it doesn't find a link.
Attachments
Patch
(1.93 KB, patch)
2012-03-26 04:13 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2012-03-26 04:13:36 PDT
Created
attachment 133771
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2012-03-26 04:16:59 PDT
Comment on
attachment 133771
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=133771&action=review
> Source/WebKit2/ChangeLog:9 > + the element returned by bestClickableNodeForTouchPoint.
how does this code ensure that you get the element returned by bestClickab... ? Maybe we should have a separate method to always get what will be activated by bestClickablenode...
Allan Sandfeld Jensen
Comment 3
2012-03-26 04:18:55 PDT
(In reply to
comment #2
)
> (From update of
attachment 133771
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=133771&action=review
> > > Source/WebKit2/ChangeLog:9 > > + the element returned by bestClickableNodeForTouchPoint. > > how does this code ensure that you get the element returned by bestClickab... ?
> By not overriding activatedNode if nothing is found. So it just stays unchanged.
> Maybe we should have a separate method to always get what will be activated by bestClickablenode...
Yeah, I was thinking about that. We could also add another parameter to return the responding node instead of the target node.
Allan Sandfeld Jensen
Comment 4
2012-03-26 05:15:44 PDT
(In reply to
comment #3
)
> (In reply to
comment #2
) > > (From update of
attachment 133771
[details]
[details]) > > View in context:
https://bugs.webkit.org/attachment.cgi?id=133771&action=review
> > > > Maybe we should have a separate method to always get what will be activated by bestClickablenode... > Yeah, I was thinking about that. We could also add another parameter to return the responding node instead of the target node.
I have tested that now, and I do not think that behaviour is desirable. In many cases scripted elements share a common event-handler, if we highlight the element with the eventhandler, we would highlight almost the entire screen. The uploaded patch works better.
WebKit Review Bot
Comment 5
2012-03-26 06:23:39 PDT
Comment on
attachment 133771
[details]
Patch Clearing flags on attachment: 133771 Committed
r112084
: <
http://trac.webkit.org/changeset/112084
>
WebKit Review Bot
Comment 6
2012-03-26 06:23:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug