[Qt] Taps are sometimes not highlighted. https://bugs.webkit.org/show_bug.cgi?id=82188

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-03-26
Reviewed by Kenneth Rohde Christiansen.

Highlight any focusable parent element, or if none is found at least
the element returned by bestClickableNodeForTouchPoint.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::highlightPotentialActivation):

Canonical link: https://commits.webkit.org/99527@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112084 268f45cc-cd09-0410-ab3c-d52691b4dbfc